--- a/styles/index.css
+++ b/styles/index.css
@@ -180,7 +180,7 @@ p {
 
   .bandeau {
     padding: 5px 0;
-    bottom: 10px;
+    bottom: 0px;
   }
 
   .photo-element {
